# cfgdiff

./: .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  cfgdiff  cfgdiff.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml  release.yml
cfgdiff/: __init__.py  cfgdiff.py  cli.py
doc/: cfgdiff.1
test/: test_cfgdiff.py  test_different_1-a.json  test_different_1-b.ini  test_different_1-b.isc  test_different_1-b.json  test_different_1-b.properties  test_same_1-a.ini  test_same_1-a.xml  test_same_1-b.isc  test_same_1-b.properties  test_same_1-b.yaml
tests/: test_cfgdiff.py  test_different_1-a.ini  test_different_1-a.xml  test_different_1-a.yaml  test_different_1-a.zone  test_different_1-b.xml  test_different_1-b.yaml  test_different_1-b.zone  test_same_1-a.ini  test_same_1-a.isc  test_same_1-b.json  test_same_1-b.xml  test_same_1-b.zone
